syntax = "proto3";
option go_package = "./proto";

service ExchangerService {
  rpc ExchangeByPair(CurrencyPair) returns (ExchangeRate);
}

message CurrencyPair{
  string from = 2;
  string to = 3;
}

message ExchangeRate{
  float rate = 1;
  string error = 2;
}

